--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 :root {
-    --background-clr: white;
+    --background-clr: #ffffff;
     --card-clr: #fff740;
+    --card-text-clr: #111;
 }
 
 * {
@@ -10,7 +11,8 @@
 body {
     margin: 0;
     background: var(--background-clr);
-    font-family: 'Roboto', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+    font-family: 'Roboto', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    transition: background 1s;
 }
 
 .container {
@@ -19,8 +21,15 @@ body {
     padding-block: 1.5rem;
 }
 
-.container > :is(h2, p) {
+.container :is(h2, p) {
     margin: 0;
+}
+
+.flex-between {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
 }
 
 #notesContainer {
@@ -35,12 +44,12 @@ body {
     height: 300px;
     padding: 1rem;
     border: none;
-    /*border-radius: 0.625rem;
-    box-shadow: 0 0 7px rgba(0, 0, 0, 0.15);*/
     box-shadow: 7px 7px 2px rgba(0, 0, 0, 0.25);
     resize: none;
     font-size: 1.5rem;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    transition: background-color 1s;
+    color: var(--card-text-clr);
 }
 
 #addNote {
@@ -48,7 +57,6 @@ body {
     border: none;
     outline: none;
     background: rgba(0, 0, 0, 0.1);
-    /*border-radius: 0.625rem;*/
     box-shadow: 7px 7px 2px rgba(0, 0, 0, 0.25);
     font-size: 7.5rem;
     color: rgba(0, 0, 0, 0.5);
@@ -58,4 +66,59 @@ body {
 
 #addNote:hover {
     background: rgba(0, 0, 0, 0.2);
+}
+
+/* Modal */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: none;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal__content {
+    background-color: #fefefe;
+    margin: 20px auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    border-radius: 0.5rem;
+}
+
+.modal__close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    transition: color 0.3s;
+}
+
+.modal__close:hover,
+.modal__close:focus {
+    color: rgb(255, 81, 81);
+    text-decoration: none;
+    cursor: pointer;
+    transition: color 0.3s;
+}
+
+#themeModalOpen {
+    cursor: pointer;
+}
+
+.colorbox {
+    /*background-color: attr(data-colorbox-clr color, red);*/
+    background: black;
+    border: 1px solid rgba(0,0,0,0.2);
+    padding: 2rem;
+}
+
+.lightline {
+    margin: 1rem auto;
+    border: none;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
